wrote patch API of the facilitator model
